syntax = "proto3";

option java_package ="the.north.winterfell.rpc.payload";
option java_multiple_files=true;

service Finder {
	rpc search (SearchUserRequest) returns (SearchUserResponse) {}
	
	rpc repeatedSearch (SearchUserRequest) returns (stream SearchUserResponse){}
}



message SearchUserRequest{
	string userName=1;
	int32 userId=2;
	enum SearchRequestType{
	MULTISEARCH=0;
	SINGLERECORD=1;
}	
	SearchRequestType searchRequestType=3;	
}	



message ResultStatus{
	string errorCode=1;
	string errorMessage=2;
	int32 level=3;
	string resolutionText=4;
}

message User{
	string userId=1;
	string userName=2;
	string country=3;
	int32 age=4;
}
message SearchUserResponse{
	repeated ResultStatus resultStatusArr=1;
	User user=2;
}


 